Deply vercel full

--- a/index.html
+++ b/index.html
@@ -59,25 +59,19 @@
                 <div class="container-card">
                     <i class="fa-solid fa-code"></i>
                     <h2 class="title-card" src="">Development</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui recusandae consequatur soluta cum
-                        ex magnam, ut minus suscipit quas accusamus. Doloribus dicta ea, nulla officiis explicabo ipsa
-                        voluptatem ex ratione.</p>
+                    <p>I am a CSS front-end developer specialized in creating modern and visually appealing web interfaces. I use the latest CSS techniques.</p>
                     <a class="read-more" href="">Read more</a>
                 </div>
                 <div class="container-card">
                     <i class="fa-solid fa-paintbrush"></i>
                     <h2 class="title-card">Design</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui recusandae consequatur soluta cum
-                        ex magnam, ut minus suscipit quas accusamus. Doloribus dicta ea, nulla officiis explicabo ipsa
-                        voluptatem ex ratione.</p>
+                    <p>I am a CSS designer specialized in creating visually appealing and functional web designs. I use CSS to bring design ideas and concepts to life.</p>
                     <a class="read-more" href="">Read more</a>
                 </div>
                 <div class="container-card">
                     <i class="fa-solid fa-chart-simple"></i>
                     <h2 class="title-card">Marketing</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui recusandae consequatur soluta cum
-                        ex magnam, ut minus suscipit quas accusamus. Doloribus dicta ea, nulla officiis explicabo ipsa
-                        voluptatem ex ratione.</p>
+                    <p>L"I am a CSS web designer with a focus on digital marketing. I use CSS to create visually appealing and optimized websites.</p>
                     <a class="read-more" href="">Read more</a>
                 </div>
             </div>
@@ -88,25 +82,16 @@
             <div class="img">
                 <div class="div">
                     <img class="img-cars" src="/images/tecnologia.jpg" alt="">
-                    <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui recusandae
-                        consequatur soluta cum
-                        ex magnam, ut minus suscipit quas accusamus. Doloribus dicta ea, nulla officiis explicabo ipsa
-                        voluptatem ex ratione.</p>
+                    <p class="parrafo">"My portfolio is a collection of projects that I have completed during my studies. It showcases examples of my work in various areas, such as web design, application development, and interface design. </p>
 
                 </div>
                 <div class="div">
-                    <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui recusandae
-                        consequatur soluta cum
-                        ex magnam, ut minus suscipit quas accusamus. Doloribus dicta ea, nulla officiis explicabo ipsa
-                        voluptatem ex ratione.</p>
+                    <p class="parrafo">"My portfolio is a collection of projects that I have completed during my studies. It showcases examples of my work in various areas, such as web design, application development, and interface design. </p>
 
                     <img class="img-cars" src="/images/23072020_MIT_IA-min-scaled-1.jpg" alt="">
                 </div>
                 <div class="div">
-                    <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui recusandae
-                        consequatur soluta cum
-                        ex magnam, ut minus suscipit quas accusamus. Doloribus dicta ea, nulla officiis explicabo ipsa
-                        voluptatem ex ratione.</p>
+                    <p class="parrafo">"My portfolio is a collection of projects that I have completed during my studies. It showcases examples of my work in various areas, such as web design, application development, and interface design. </p>
                     <img class="img-cars"
                         src="/images/pngtree-artificial-intelligence-future-technology-illustration-background-picture-image_2380572.jpg"
                         alt="">
